<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">BAAC</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_about">About</string>
	<string name="menu_update">Update</string>

	<string name="first_run_title">Welcome to BAAC</string>
	<string name="first_run_message">Please configure the application URL and login details first.</string>
	<string name="first_run_ok">OK</string>

	<string name="pref_settings_title">Account Settings</string>
	<string name="pref_messages_title">Messages</string>
	<string name="pref_user_title">Application</string>
	<string name="about">This is Bakalari\'s Alternative Client, a hobby project driven by absurdity of this world.</string>

	<string name="url_title">Bakalari homepage URL</string>
	<string name="url_summary">Url to application main page</string>
	<string name="url_dialogTitle">Please enter url</string>
	<string name="url_defaultValue">http://</string>
	
	<string name="username_title">Username</string>
	<string name="menu_settings_username_summary">Username to access the website</string>
	<string name="menu_settings_username_dialogTitle">Please enter your username</string>
	
	<string name="password_title">Password</string>
	<string name="menu_settings_password_summary">Password to access the website</string>
	<string name="menu_settings_password_dialogTitle">Please enter your password</string>

	<string name="user_name">User Name</string>
	<string name="menu_user_name_summary">User name to show in title</string>
	<string name="menu_user_name_dialogTitle">Please enter the user name</string>



	<string name="status_url">status_url</string>

	<string name="close">Close</string>
	<string name="about_title">About NagMonDroid</string>
	<string name="about_message">NagMonDroid is written by Simon McLaughlin</string>
	<string name="version">Version</string>
	
	<string name="all_ok">Everything is OK</string>
	<string name="yay">Yay!!</string>
	<string name="all_good">Its all good</string>
	
	<string name="notification_critical_service">critical service</string>
	<string name="notification_critical_services">critical services</string>
	
	<string name="notification_warning_service">warning service</string>
	<string name="notification_warning_services">warning services</string>
	
	<string name="notification_unknown_service">unknown service</string>
	<string name="notification_unknown_services">unknown services</string>
	
	<string name="notification_ok_service">ok service</string>
	<string name="notification_ok_services">ok services</string>
	
	<string name="link_text">View Extended Information</string>
		
	<string name="background_enabled">Background checking enabled</string>
	<string name="background_disabled">Background checking disabled</string>
    <string name="remote_service_started">NagMonDroid service has started</string>
    <string name="remote_service_stopped">NagMonDroid service has stopped</string>
        
    <string name="remote_service_connected">Connected to NagMonDroid service</string>
    <string name="remote_service_disconnected">Disconnected from NagMonDroid service</string>
    <string name="remote_call_failed">Failure calling NagMonDroid service</string>
	<string-array name="interval_name">
		<item>10 Seconds</item>
		<item>30 Seconds</item>
		<item>60 Seconds</item>
		<item>90 Seconds</item>
		<item>3 Minutes</item>
		<item>5 Minutes</item>
		<item>10 Minutes</item>
		<item>30 Minutes</item>
		<item>60 Minutes</item>
		<item>120 Minutes</item>
		<item>3 Hours</item>
		<item>6 Hours</item>
		<item>12 Hours</item>
		<item>24 Hours</item>
	</string-array>
	<string-array name="interval_time">
		<item>10000</item>
		<item>30000</item>
		<item>60000</item>
		<item>90000</item>
		<item>180000</item>
		<item>300000</item>
		<item>600000</item>
		<item>1800000</item>
		<item>3600000</item>
		<item>7200000</item>
		<item>10800000</item>
		<item>21600000</item>
		<item>43200000</item>
		<item>86400000</item>
	</string-array>
</resources>
