<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
	android:layout_height="match_parent">

	<PreferenceCategory android:title="@string/pref_settings_title">
	<EditTextPreference
		android:key="url"
		android:title="@string/url_title"
		android:summary="@string/url_summary"
		android:dialogTitle="@string/url_dialogTitle"
		android:defaultValue="@string/url_defaultValue"
	/>

	<EditTextPreference
		android:key="username"
		android:title="@string/username_title"
		android:summary="@string/menu_settings_username_summary"
		android:dialogTitle="@string/menu_settings_username_dialogTitle"
	/>
	<EditTextPreference
		android:key="password"
		android:title="@string/password_title"
		android:summary="@string/menu_settings_password_summary"
		android:dialogTitle="@string/menu_settings_password_dialogTitle"
		android:password="true"
	/>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/pref_messages_title">
	<ListPreference
			android:key="rule"
			android:entries="@array/ruleOptions"
			android:entryValues="@array/ruleValues"
			android:summary="Available message rules"
			android:title="Message rules" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/pref_user_title">
		<EditTextPreference
			android:key="user"
			android:title="@string/user_name"
			android:summary="@string/menu_user_name_summary"
			android:dialogTitle="@string/menu_user_name_dialogTitle"/>
	</PreferenceCategory>
</PreferenceScreen>
